@@ -1,7 +1,6 @@
 package com.raito.rpc.common.serialize.serializer;
 
 import com.google.protobuf.Message;
-import com.raito.rpc.common.util.JsonUtils;
 import com.raito.rpc.common.exception.SerialException;
 import com.raito.rpc.common.protocol.RpcRequest;
 import com.raito.rpc.common.protocol.RpcResponse;
@@ -11,7 +10,6 @@ import protocol.RpcResponseProto;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author cn
@@ -25,35 +23,29 @@ public class ProtobufSerializer implements Serializer {
         switch (obj) {
             case RpcRequest request -> {
                 RpcRequestProto.RpcRequest.Builder builder = RpcRequestProto.RpcRequest.newBuilder()
-                        .setClassName(request.getClassName())
-                        .setMethodName(request.getMethodName())
-                        .setReturnType(request.getReturnType());
-
-                List<String> paramTypeNames;
-                if (request.getArgs() != null) {
-                    paramTypeNames = Arrays.stream(request.getParamTypes())
-                            .collect(Collectors.toList());
-                } else {
-                    paramTypeNames = List.of();
-                }
-                builder.addAllParamTypes(paramTypeNames);
-
+                        .setServer(request.getServer())
+                        .setMethodName(request.getMethodName());
                 List<String> argValues;
                 if (request.getArgs() != null) {
-                    argValues = Arrays.stream(request.getArgs())
-                            .map(arg -> (arg instanceof String) ? (String) arg : JsonUtils.toJson(arg))
-                            .collect(Collectors.toList());
+                    argValues = Arrays.stream(request.getArgs()).toList();
                 } else {
                     argValues = List.of();
                 }
                 builder.addAllArgs(argValues);
                 message = builder.build();
             }
-            case RpcResponse response -> message = RpcResponseProto.RpcResponse.newBuilder()
-                    .setResult(JsonUtils.toJson(response.getResult()) == null ? "" : JsonUtils.toJson(response.getResult()))
-                    .setErrorMessage(response.getErrorMessage() == null ? "" : response.getErrorMessage())
-                    .setSuccess(response.isSuccess())
-                    .build();
+            case RpcResponse response -> {
+                String result = "";
+                try {
+                    result = response.getResult().toString();
+                } catch (Exception ignored) {
+                }
+                message = RpcResponseProto.RpcResponse.newBuilder()
+                        .setResult(result)
+                        .setErrorMessage(response.getErrorMessage() == null ? "" : response.getErrorMessage())
+                        .setSuccess(response.isSuccess())
+                        .build();
+            }
             case Message msg -> message = msg;
             case null -> throw new SerialException("对象为空");
             default -> throw new SerialException("不支持的对象类型: " + obj.getClass().getName());
